[package]
name = "mnemonic-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39 = "2.2.2"
getrandom = "0.4.2"
eframe = { version = "0.33.3", default-features = false, features = ["glow", "default_fonts"] }
k256 = "0.13.4"
hmac = "0.12.1"
sha2 = "0.10.9"
ripemd = "0.1.3"
bech32 = "0.11.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ed25519-dalek = "2.2.0"
blake2 = "0.10.6"
bs58 = { version = "0.5.1", features = ["check"] }

# Size-optimized release build: opt for size, fat LTO, single codegen unit,
# abort-on-panic (no unwind tables) and strip symbols.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
